id fetch from mysql

--- a/src/main/resources/templates/fragments/list.html
+++ b/src/main/resources/templates/fragments/list.html
@@ -1,6 +1,7 @@
 
 <div class="container-list" th:fragment="content-product">
     <div class="list" th:each="product : ${products}">
+        <p th:text="${product.getId()}">id</p>
         <img alt="" th:src="@{${product.getImages()}}" style="width: 100px; height: 100px;">
         <p th:text="${product.getName()}">name</p>
     </div>
