--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,4 +4,9 @@
     <title th:text="${titleHeader}">Default Title</title>
     <!-- <link rel="stylesheet" href="/css/styles.css">  Add your styles here 
     <script src="/js/scripts.js" defer></script>  Add your scripts here -->
+    <style>
+        .errors{
+            color: red;
+        }
+    </style>
 </head>
